<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/customer_info"

    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CustomerInfoActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"

            android:theme="?attr/actionBarTheme">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/customer_info_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/customer_info_title"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </FrameLayout>


    <!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabs">-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"

        style="@style/customTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:tabBackground="@drawable/tab_color"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem


            android:id="@+id/info_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_btn" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/photo_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_btn" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/reservation_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_btn" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

<!--    </LinearLayout>-->








</androidx.constraintlayout.widget.ConstraintLayout>